# spikes

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md  docker-compose.yml  pants.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json  post-install.sh
.github/: renovate.json
.github/linters/: mypy.ini  ruff.toml
iggy-wasm/pyclient/: pyproject.toml
iggy_wasm/client_python/: pyproject.toml
iggy_wasm/server_feedhandler/: Cargo.toml
iggy_wasm/server_inproc/: Cargo.toml
pants-plugins/markdown/: BUILD  markdownlint.py  register.py
wasmtime/pyclient/: BUILD  pyproject.toml
