[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iggy-wasm-pyclient"
version = "0.1.0"
description = "A Python client for interacting with WebAssembly modules"
dependencies = [
    "wasmtime>=30.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15",
    "pytest>=8.3",
]
